ADD_SUBDIRECTORY(brief)
ADD_SUBDIRECTORY(bspline)
ADD_SUBDIRECTORY(bsplinehist)
ADD_SUBDIRECTORY(cameras)
ADD_SUBDIRECTORY(cpu)
ADD_SUBDIRECTORY(clhist)
ADD_SUBDIRECTORY(clprefixsum)
#ADD_SUBDIRECTORY(dc1394)
#ADD_SUBDIRECTORY(dc1394seq)
#ADD_SUBDIRECTORY(dlt)
#ADD_SUBDIRECTORY(eigen2)
ADD_SUBDIRECTORY(epnp)
ADD_SUBDIRECTORY(esm)
ADD_SUBDIRECTORY(ferns)
ADD_SUBDIRECTORY(features)
ADD_SUBDIRECTORY(featureAnalyser)
ADD_SUBDIRECTORY(featureTracking)
ADD_SUBDIRECTORY(featureScale)
ADD_SUBDIRECTORY(feature_dataset)
ADD_SUBDIRECTORY(featureROC)
ADD_SUBDIRECTORY(fundamental)
ADD_SUBDIRECTORY(opencvROC)
ADD_SUBDIRECTORY(filter)
ADD_SUBDIRECTORY(flow)
ADD_SUBDIRECTORY(flowcolor)
ADD_SUBDIRECTORY(flowwarp)
ADD_SUBDIRECTORY(harris)
ADD_SUBDIRECTORY(harriscircular)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(kdtree)
ADD_SUBDIRECTORY(levMar)
ADD_SUBDIRECTORY(list)
ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(mitracker)
ADD_SUBDIRECTORY(metaio)
ADD_SUBDIRECTORY(ncc)
#ADD_SUBDIRECTORY(numericalJacobian)
#ADD_SUBDIRECTORY(onboardTracking)
#ADD_SUBDIRECTORY(openclasm)
ADD_SUBDIRECTORY(openclimg)
#ADD_SUBDIRECTORY(opencv)
#ADD_SUBDIRECTORY(opencl)
ADD_SUBDIRECTORY(orb)
ADD_SUBDIRECTORY(orbHash)
ADD_SUBDIRECTORY(orb_homography)
#ADD_SUBDIRECTORY(optflow)
#ADD_SUBDIRECTORY(optflowwarp)
ADD_SUBDIRECTORY(params)
ADD_SUBDIRECTORY(patch)
ADD_SUBDIRECTORY(patternGenerator)
ADD_SUBDIRECTORY(pyrdown)
ADD_SUBDIRECTORY(rof)
ADD_SUBDIRECTORY(ROFFGP)
#ADD_SUBDIRECTORY(sba)
#ADD_SUBDIRECTORY(sobel)
#ADD_SUBDIRECTORY(svd3x3)
ADD_SUBDIRECTORY(homography)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(delegate)
ADD_SUBDIRECTORY(idgen)
ADD_SUBDIRECTORY(time)
ADD_SUBDIRECTORY(ioselect)
ADD_SUBDIRECTORY(signal)
ADD_SUBDIRECTORY(sequenceGenerator)
ADD_SUBDIRECTORY(speedTests)
ADD_SUBDIRECTORY(videoreader)
ADD_SUBDIRECTORY(ply)
ADD_SUBDIRECTORY(pixelInspector)
ADD_SUBDIRECTORY(guimodel)
ADD_SUBDIRECTORY(ptset)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(glfbo)
ADD_SUBDIRECTORY(glstuff)
ADD_SUBDIRECTORY(glmls)
ADD_SUBDIRECTORY(pca)
ADD_SUBDIRECTORY(spline)
ADD_SUBDIRECTORY(faceshape)
ADD_SUBDIRECTORY(faceshapepca)
ADD_SUBDIRECTORY(faceshapepca2)
ADD_SUBDIRECTORY(splineui)
ADD_SUBDIRECTORY(colorxyz)
ADD_SUBDIRECTORY(convolve)
ADD_SUBDIRECTORY(calibration)
ADD_SUBDIRECTORY(line2d)
ADD_SUBDIRECTORY(rectsimilarity)
ADD_SUBDIRECTORY(psgfx)
ADD_SUBDIRECTORY(gfximg)
ADD_SUBDIRECTORY(cliptest)
ADD_SUBDIRECTORY(faceshapeopt)
ADD_SUBDIRECTORY(linesample)
ADD_SUBDIRECTORY(canny)
ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(stack)
ADD_SUBDIRECTORY(stereoSLAM)
ADD_SUBDIRECTORY(plugin)
ADD_SUBDIRECTORY(polygon)
ADD_SUBDIRECTORY(path)
ADD_SUBDIRECTORY(faceshapeppca)
#ADD_SUBDIRECTORY(ppca)
ADD_SUBDIRECTORY(faceannotate)
#ADD_SUBDIRECTORY(matvecbench)
ADD_SUBDIRECTORY(glgfx)
ADD_SUBDIRECTORY(glview)
ADD_SUBDIRECTORY(matvec)
ADD_SUBDIRECTORY(filterview)
ADD_SUBDIRECTORY(Graph)
ADD_SUBDIRECTORY(graphui)
ADD_SUBDIRECTORY(orbpatterns)
ADD_SUBDIRECTORY(warp)
ADD_SUBDIRECTORY(xml)

#IF(UNIX)
#	IF(APPLE)
#		ADD_SUBDIRECTORY(qtkitcamera)
#	ELSE()
#		ADD_SUBDIRECTORY(v4l2)
#	ENDIF()
#ENDIF()
