# search required dependencies
FIND_PACKAGE( Eigen3 REQUIRED QUIET )
FIND_PACKAGE( OpenCL REQUIRED QUIET )
FIND_PACKAGE( DC1394 QUIET )
FIND_PACKAGE( uEyeUsb QUIET )

ADD_SUBDIRECTORY(alp3d)
#ADD_SUBDIRECTORY(brief)
ADD_SUBDIRECTORY(bspline)
ADD_SUBDIRECTORY(bsplinehist)
ADD_SUBDIRECTORY(boxfilter)
ADD_SUBDIRECTORY(boxfiltercpu)

ADD_SUBDIRECTORY(calibration)
ADD_SUBDIRECTORY(calibrationOptimization)
ADD_SUBDIRECTORY(cameras)
ADD_SUBDIRECTORY(canny)
ADD_SUBDIRECTORY(clfilter)
ADD_SUBDIRECTORY(clflow)
ADD_SUBDIRECTORY(clflowvid)
ADD_SUBDIRECTORY(clhist)
ADD_SUBDIRECTORY(clprefixsum)
ADD_SUBDIRECTORY(clpyr)
ADD_SUBDIRECTORY(colorcode)
ADD_SUBDIRECTORY(convolve)

#ADD_SUBDIRECTORY(dc1394seq)

ADD_SUBDIRECTORY(debayer)
ADD_SUBDIRECTORY(delegate)
ADD_SUBDIRECTORY(dotdetect)
ADD_SUBDIRECTORY(dmaptopoints)
#ADD_SUBDIRECTORY(depthInitialization)
#ADD_SUBDIRECTORY(dlt)

ADD_SUBDIRECTORY(epnp)
ADD_SUBDIRECTORY(esm)
ADD_SUBDIRECTORY(extractImages)

ADD_SUBDIRECTORY(faceannotate)
ADD_SUBDIRECTORY(faceshape)
ADD_SUBDIRECTORY(faceshapeopt)
ADD_SUBDIRECTORY(faceshapepca)
ADD_SUBDIRECTORY(faceshapepca2)
ADD_SUBDIRECTORY(faceshapeppca)
ADD_SUBDIRECTORY(fddb)
#ADD_SUBDIRECTORY(fastFeatures)
#ADD_SUBDIRECTORY(featureAnalyser)
#ADD_SUBDIRECTORY(feature_dataset)
#ADD_SUBDIRECTORY(featureFilter)
#ADD_SUBDIRECTORY(featureROC)
#ADD_SUBDIRECTORY(features)
#ADD_SUBDIRECTORY(featureScale)
#ADD_SUBDIRECTORY(featureTracking)
ADD_SUBDIRECTORY(featuresHomography)
ADD_SUBDIRECTORY(featureDetector)
#ADD_SUBDIRECTORY(ferns)
ADD_SUBDIRECTORY(fft)
ADD_SUBDIRECTORY(filter)
ADD_SUBDIRECTORY(flow)
ADD_SUBDIRECTORY(flowcolor)
ADD_SUBDIRECTORY(flowwarp)
ADD_SUBDIRECTORY(fundamental)

ADD_SUBDIRECTORY(gfximg)
ADD_SUBDIRECTORY(glbezier)
ADD_SUBDIRECTORY(glfbo)
ADD_SUBDIRECTORY(glgfx)
ADD_SUBDIRECTORY(glmls)
ADD_SUBDIRECTORY(glsceneview)
ADD_SUBDIRECTORY(glscene)
ADD_SUBDIRECTORY(glstuff)
ADD_SUBDIRECTORY(glview)
ADD_SUBDIRECTORY(Graph)
ADD_SUBDIRECTORY(graphui)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(guidedmatting)

ADD_SUBDIRECTORY(harris)
ADD_SUBDIRECTORY(harriscircular)
ADD_SUBDIRECTORY(homography)
#ADD_SUBDIRECTORY(homoStitch)

ADD_SUBDIRECTORY(iboxfilter)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(imageSequence)
ADD_SUBDIRECTORY(imageView)
ADD_SUBDIRECTORY(imgpolyraster)
ADD_SUBDIRECTORY(integralimage)
ADD_SUBDIRECTORY(iexpr)

ADD_SUBDIRECTORY(kdtree)
#ADD_SUBDIRECTORY(klt)

ADD_SUBDIRECTORY(levMar)
ADD_SUBDIRECTORY(linesample)
ADD_SUBDIRECTORY(linesearch)
ADD_SUBDIRECTORY(list)

ADD_SUBDIRECTORY(marchingcube)
ADD_SUBDIRECTORY(marchingcubecl)
ADD_SUBDIRECTORY(matvec)
ADD_SUBDIRECTORY(matLUP)
#ADD_SUBDIRECTORY(matvecbench)
ADD_SUBDIRECTORY(metaio)
ADD_SUBDIRECTORY(middleburyCamToXML)
#ADD_SUBDIRECTORY(mitracker)
#ADD_SUBDIRECTORY(mitrackerlog)
ADD_SUBDIRECTORY(multicam)
ADD_SUBDIRECTORY(mvpatchmatch)

ADD_SUBDIRECTORY(ncc)
#ADD_SUBDIRECTORY(numericalJacobian)

#ADD_SUBDIRECTORY(onboardTracking)
#ADD_SUBDIRECTORY(opencl)
#ADD_SUBDIRECTORY(openclasm)
ADD_SUBDIRECTORY(openclimg)
#ADD_SUBDIRECTORY(opencv)
#ADD_SUBDIRECTORY(opencvROC)
#ADD_SUBDIRECTORY(optflow)
#ADD_SUBDIRECTORY(optflowwarp)
#ADD_SUBDIRECTORY(orb)
#ADD_SUBDIRECTORY(orbHash)
#ADD_SUBDIRECTORY(orb_homography)
#ADD_SUBDIRECTORY(orbpatterns)
#ADD_SUBDIRECTORY(orbStereoMatching)

ADD_SUBDIRECTORY(p3p)
ADD_SUBDIRECTORY(params)
ADD_SUBDIRECTORY(pdopt)
ADD_SUBDIRECTORY(pmsfm)
ADD_SUBDIRECTORY(pmstereo)
ADD_SUBDIRECTORY(pmhstereo)
ADD_SUBDIRECTORY(patch)
ADD_SUBDIRECTORY(patchmatch)
ADD_SUBDIRECTORY(path)
ADD_SUBDIRECTORY(patternGenerator)
ADD_SUBDIRECTORY(pca)
ADD_SUBDIRECTORY(pixelInspector)
ADD_SUBDIRECTORY(plotview)
ADD_SUBDIRECTORY(plugin)
ADD_SUBDIRECTORY(polygon)
#ADD_SUBDIRECTORY(ppca)
ADD_SUBDIRECTORY(psgfx)
ADD_SUBDIRECTORY(pyrdown)

#ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(rdftest)
ADD_SUBDIRECTORY(rawvideoCutter)
ADD_SUBDIRECTORY(rbtree)
ADD_SUBDIRECTORY(rectsimilarity)
ADD_SUBDIRECTORY(rgbddataset)
#ADD_SUBDIRECTORY(rgbdvoDebugging)
ADD_SUBDIRECTORY(rof)
ADD_SUBDIRECTORY(ROFFGP)

ADD_SUBDIRECTORY(sba)
ADD_SUBDIRECTORY(scene)
ADD_SUBDIRECTORY(sequenceGenerator)
ADD_SUBDIRECTORY(signal)
ADD_SUBDIRECTORY(simdpts)
ADD_SUBDIRECTORY(slamMapVis)
#ADD_SUBDIRECTORY(sobel)
ADD_SUBDIRECTORY(sockets)
#ADD_SUBDIRECTORY(speedTests)
#ADD_SUBDIRECTORY(spline)
#ADD_SUBDIRECTORY(splineui)
ADD_SUBDIRECTORY(stack)
ADD_SUBDIRECTORY(stereoFBP)
ADD_SUBDIRECTORY(stereoSLAM)
ADD_SUBDIRECTORY(stereocv)
ADD_SUBDIRECTORY(stereocvtvl1)
ADD_SUBDIRECTORY(stereogcv)
ADD_SUBDIRECTORY(stereorectify)
ADD_SUBDIRECTORY(stereotvl1)
#ADD_SUBDIRECTORY(svd3x3)

ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(threshold)
ADD_SUBDIRECTORY(tsdfVolume)
ADD_SUBDIRECTORY(tsdfVolume2)

ADD_SUBDIRECTORY(undistort)
ADD_SUBDIRECTORY(undistortrectify)
ADD_SUBDIRECTORY(unproject)
ADD_SUBDIRECTORY(unproject2)
ADD_SUBDIRECTORY(unproject3)
ADD_SUBDIRECTORY(unproject4)

ADD_SUBDIRECTORY(videoreader)
ADD_SUBDIRECTORY(videowriter)

ADD_SUBDIRECTORY(warp)

ADD_SUBDIRECTORY(xml)

ADD_SUBDIRECTORY(yuyvconv)

FIND_PACKAGE( OpenNI QUIET )
IF( ${OpenNI_FOUND} )
	ADD_SUBDIRECTORY(openni)
	ADD_SUBDIRECTORY(rgbdRecording)
ENDIF()

IF( ${CVT_USEUEYE} AND ${UEYEUSB_FOUND} )
	ADD_SUBDIRECTORY( ueye )
	ADD_SUBDIRECTORY( ueyeStereo )
ENDIF()

#IF(UNIX)
#	IF(APPLE)
#		ADD_SUBDIRECTORY(qtkitcamera)
#	ELSE()
#		ADD_SUBDIRECTORY(v4l2)
#	ENDIF()
#ENDIF()
