# search required dependencies
FIND_PACKAGE( Eigen3 REQUIRED QUIET )
FIND_PACKAGE( OpenCL REQUIRED QUIET )
FIND_PACKAGE( DC1394 QUIET )
FIND_PACKAGE( uEyeUsb QUIET )

ADD_SUBDIRECTORY(delegate)
ADD_SUBDIRECTORY(featureDetector)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(imageView)
ADD_SUBDIRECTORY(multicam)
ADD_SUBDIRECTORY(pca)
ADD_SUBDIRECTORY(pixelInspector)
ADD_SUBDIRECTORY(plotview)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(undistort)
ADD_SUBDIRECTORY(videoreader)
ADD_SUBDIRECTORY(videowriter)